; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxv.c_yo_block.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxv.c_yo_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i32*, i32, i32*)* @yo_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @yo_block(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca [16 x i32], align 16
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32* %4, i32** %10, align 8
  %12 = load i32*, i32** %6, align 8
  %13 = getelementptr inbounds [16 x i32], [16 x i32]* %11, i64 0, i64 0
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %10, align 8
  %16 = call i32 @yao_subblock(i32* %12, i32* %13, i32 %14, i32* %15)
  %17 = load i32*, i32** %6, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 4
  %19 = getelementptr inbounds [16 x i32], [16 x i32]* %11, i64 0, i64 0
  %20 = load i32, i32* %7, align 4
  %21 = load i32*, i32** %10, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 8
  %23 = call i32 @yao_subblock(i32* %18, i32* %19, i32 %20, i32* %22)
  %24 = load i32*, i32** %6, align 8
  %25 = getelementptr inbounds i32, i32* %24, i64 8
  %26 = getelementptr inbounds [16 x i32], [16 x i32]* %11, i64 0, i64 0
  %27 = load i32, i32* %7, align 4
  %28 = load i32*, i32** %10, align 8
  %29 = getelementptr inbounds i32, i32* %28, i64 16
  %30 = call i32 @yao_subblock(i32* %25, i32* %26, i32 %27, i32* %29)
  %31 = load i32*, i32** %6, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 12
  %33 = getelementptr inbounds [16 x i32], [16 x i32]* %11, i64 0, i64 0
  %34 = load i32, i32* %7, align 4
  %35 = load i32*, i32** %10, align 8
  %36 = getelementptr inbounds i32, i32* %35, i64 24
  %37 = call i32 @yao_subblock(i32* %32, i32* %33, i32 %34, i32* %36)
  ret i32 32
}

declare dso_local i32 @yao_subblock(i32*, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
